swagger and routes work
