# src/utils/swagger/swagger.json
@@ -3,7 +3,65 @@
 	"consumes": [
 		"application/json"
 	],
-	"definitions": {},
+	"definitions": {
+		"User": {
+			"properties": {
+				"id": {
+					"type": "number",
+					"format": "double"
+				},
+				"email": {
+					"type": "string"
+				},
+				"name": {
+					"type": "string"
+				},
+				"status": {
+					"type": "string",
+					"enum": [
+						"Happy",
+						"Sad"
+					],
+					"x-nullable": true
+				},
+				"phoneNumbers": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					}
+				}
+			},
+			"required": [
+				"id",
+				"email",
+				"name",
+				"phoneNumbers"
+			],
+			"type": "object"
+		},
+		"UserCreationRequest": {
+			"properties": {
+				"email": {
+					"type": "string"
+				},
+				"name": {
+					"type": "string"
+				},
+				"phoneNumbers": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					}
+				}
+			},
+			"required": [
+				"email",
+				"name",
+				"phoneNumbers"
+			],
+			"type": "object"
+		}
+	},
 	"info": {
 		"title": "ts-base-stack",
 		"version": "1.0.0",
@@ -12,7 +70,64 @@
 			"name": "ISC"
 		}
 	},
-	"paths": {},
+	"paths": {
+		"/Users/{id}": {
+			"get": {
+				"operationId": "GetUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/User"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"format": "double",
+						"type": "number"
+					},
+					{
+						"in": "query",
+						"name": "name",
+						"required": true,
+						"type": "string"
+					}
+				]
+			}
+		},
+		"/Users": {
+			"post": {
+				"operationId": "CreateUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"201": {
+						"description": "Created"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/UserCreationRequest"
+						}
+					}
+				]
+			}
+		}
+	},
 	"produces": [
 		"application/json"
 	],
